fixed overflow text

--- a/frontend/src/app/features/upload/upload.component.css
+++ b/frontend/src/app/features/upload/upload.component.css
@@ -225,6 +225,10 @@ hr {
     display: flex;
     align-items: center;
     gap: 10px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 95%;
   }
 
   .sbom:hover{
